--- a/MonthlyStatement/Views/Account/Login.cshtml
+++ b/MonthlyStatement/Views/Account/Login.cshtml
@@ -5,7 +5,7 @@
 }
 <style>
     body {
-        background-image: url('/assets/img/vlu/background.jpg');
+        background-image: url('@Url.Content("~/assets/img/vlu/background.jpg")');
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: cover;
