--- a/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormPersonalEdit.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormPersonalEdit.cshtml
@@ -13,7 +13,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-primary" style="height:100px">
-                        <h4 class="text-white" style="font-size:1.75rem">Báo cáo cá nhân: @Model.ReportPeriod.report_period_name</h4>
+                        <h4 class="text-white" style="font-size:1.75rem">Báo cáo bộ môn: @Model.ReportPeriod.report_period_name</h4>
                     </div>
                 </div>
                 <div class="col-12">
@@ -21,8 +21,9 @@
                         <div class="card-body">
                             <form>
                                 <div class="form-group">
-                                    <label for="exampleFormControlInput1">Tên người tạo mẫu báo cáo</label>
-                                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Tên người tạo">
+                                    <label for="exampleFormControlInput1">Người tạo mẫu báo cáo</label>
+                                    <input value="@Session["Email"]" type="email" class="form-control" id="emailUser" readonly>
+                                    <input value="@Model.form_personal_report_id" id="idReportPeriod" hidden="hidden">
                                 </div>
                                 <div class="table-responsive">
                                     <table class="table table-striped" id="table-2">
@@ -58,7 +59,7 @@
                                                     <tr>
                                                         <td class="text-center pt-2">
                                                             <div class="pretty p-switch p-fill">
-                                                                <input name="@items.category_of_id" type="checkbox" id="@(items.category_of_id)categorylv2-@(items.category_id)" value="@item.category_id" />
+                                                                <input name="@items.category_of_id" type="checkbox" id="@(items.category_of_id)categorylv2-@(items.category_id)" value="@items.category_id" />
                                                                 <div class="state">
                                                                     <label></label>
                                                                 </div>
@@ -78,7 +79,7 @@
                                     </table>
                                 </div>
                                 <div class="text-right">
-                                    <button class="btn btn-primary mr-1" type="submit">Lưu báo cáo</button>
+                                    <a href="#" role="button" class="btn btn-primary" id="saveForm">Lưu báo cáo</a>
                                     <button class="btn btn-danger " type="reset">Reset</button>
                                 </div>
                             </form>
@@ -93,6 +94,7 @@
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
 <script>
     $(document).ready(function () {
+        //radio button
         $('[id*="categorylv2-"]').on('input', function () {
             var id = $(this).attr('name');
             if ($(this).prop('checked')) {
@@ -110,6 +112,88 @@
                     $('#categorylv1-' + id).prop('checked', false);
                 }
             }
+        });
+        $('[id*="categorylv1-"]').on('input', function () {
+            var id = $(this).attr('name');
+            if ($(this).prop('checked') == false) {
+                $('[name="' + id + '"]').each(function () {
+                    $(this).prop('checked', false);
+                });
+            }
+        });
+        //button edit
+        var readURL = function (input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+
+                reader.onload = function (e) {
+                    $('.profile-pic').attr('src', e.target.result);
+                }
+
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+
+        $(".file-upload").on('change', function () {
+            readURL(this);
+        });
+
+        $(".upload-button").on('click', function () {
+            $(".file-upload").click();
+        });
+
+        //button save form
+        $('#saveForm').on('click', function () {
+            var idReport = $('#idReportPeriod').val();
+            var data = "";
+            $(':checkbox').each(function () {
+                if ($(this).prop('checked')) {
+                    data += $(this).val() + "-";
+                }
+            });
+            swal({
+                title: 'Lưu biểu mẫu?',
+                text: 'Bạn có muốn lưu biểu mẫu?',
+                icon: 'warning',
+                buttons: true,
+                dangerMode: true,
+            })
+                .then((willAdd) => {
+                    if (willAdd) {
+                        $.ajax({
+                            type: "POST",
+                            traditional: true,
+                            async: false,
+                            cache: false,
+                            url: $('#requestUrl').val() + 'ReportPeriods/FormPersonalEdit',
+                            data: {
+                                idReport: idReport,
+                                data: data.substring(0, data.length - 1)
+                            },
+                            context: document.body,
+                            success: function (result) {
+                                if (result == "Success") {
+                                    swal('Thêm thành công', {
+                                        icon: 'success',
+                                    });
+                                } else {
+                                    swal(result, {
+                                        icon: 'error',
+                                    });
+                                }
+                            },
+                            error: function (xhr) {
+                                swal(xhr.responseText, {
+                                    icon: 'error',
+                                });
+                                //debugger;
+                                console.log(xhr.responseText);
+                                alert("Error has occurred..");
+                            }
+                        });
+
+                    }
+                });
         });
     });
 </script>
