--- a/MonthlyStatement/Areas/Admin/Views/Categories/Edit.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Categories/Edit.cshtml
@@ -23,7 +23,6 @@
                                     <!-- Account details card-->
                                     <div class="card mb-4">
                                         <div class="card-header"><b>Thông tin chi tiết</b></div>
-                                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                                         @Html.HiddenFor(model => model.category_id)
                                         <div class="card-body" style="margin-top: 0.2rem">
                                             @if (Model.category_of_id != null)
@@ -35,10 +34,9 @@
                                             }
                                             <!-- Form Group (Category Content)-->
                                             <div class="mb-3">
-                                                 <label class="small mb-1">Tên danh mục con</label>
-                                                  @Html.EditorFor(model => model.category_content, new { htmlAttributes = new { @class = "form-control" } })
-                                             </div>
-
+                                                <label class="small mb-1">Tên danh mục con</label>
+                                                @Html.EditorFor(model => model.category_content, new { htmlAttributes = new { @class = "form-control", type = "text", @required = "" } })
+                                            </div>
                                             <div style="text-align: center; margin-top:1.8rem" class="mb-3">
                                                 <button style="width:180px; color:white" type="submit" class="btn btn-primary">
                                                     Lưu
