add form report personal detail

--- a/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormPersonalDetail.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormPersonalDetail.cshtml
@@ -1,8 +1,8 @@
-﻿@model IEnumerable<MonthlyStatement.Models.FormDepartmentReportDetail>
+﻿@model IEnumerable<MonthlyStatement.Models.FormPersonalReportDetail>
 @using MonthlyStatement.Models
 
 @{
-    ViewBag.Title = "FormDepartmentDetail";
+    ViewBag.Title = "FormPersonalDetail";
     Layout = "~/Views/Shared/_Layout.cshtml";
     int i = 0;
 }
@@ -13,7 +13,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-primary" style="height:100px">
-                        <h4 class="text-white" style="font-size:1.75rem">Báo cáo bộ môn</h4>
+                        <h4 class="text-white" style="font-size:1.75rem">Báo cáo cá nhân</h4>
                     </div>
                 </div>
                 <div class="col-12">
