Update FE Form minh chứng

--- a/MonthlyStatement/Views/Shared/_Layout.cshtml
+++ b/MonthlyStatement/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="~/assets/css/custom.css" />
     <link rel='shortcut icon' type='image/x-icon' href='~/assets/img/vlu/logo.png' />
     <link rel="stylesheet" href="~/assets/bundles/pretty-checkbox/pretty-checkbox.min.css">
+    <link rel="stylesheet" href="~/assets/bundles/dropzonejs\dropzone.css">
 </head>
 
 <body>
@@ -71,7 +72,7 @@
             </div>
         </div>
     </div>
-    <input hidden="hidden" id="requestUrl" value="@Url.Content("~")"/>
+    <input hidden="hidden" id="requestUrl" value="@Url.Content("~")" />
     <script src="~/assets/js/page/calendar.js"></script>
     <script src="~/assets/js/page/chart-amchart.js"></script>
     <script src="~/assets/js/page/chart-apexcharts.js"></script>
@@ -110,6 +111,7 @@
     <script src="~/assets/js/page/widget-data.js"></script>
     <script src="~/assets/js/page/advance-table.js"></script>
     <script src="~/assets/js/page/auth-register.js"></script>
+    <script src="~/assets/bundles/dropzonejs/min/dropzone.min.js"></script>
     <!-- General JS Scripts -->
     <script src="~/assets/js/app.min.js"></script>
     <!-- JS Libraies -->
