--- a/MonthlyStatement/Areas/Admin/Views/PersonalReportForm/Formreport.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/PersonalReportForm/Formreport.cshtml
@@ -84,8 +84,9 @@
                                 <label>2. </label>
                                 MINH CHỨNG
                             </div>
-                            <form action="#" class="dropzone dz-clickable" id="upload">
-                                <div class="dz-default dz-message"><span>Drop files here to upload</span></div>
+                            <form action="#" class="dropzone dz-clickable" id="mydropzone">
+                                <div class="dz-default dz-message"><span>Nộp mình chứng (Nếu có)</span></div>
+                                <input type="file" multiple="multiple" class="dz-hidden-input" style="visibility: hidden; position: absolute; top: 0px; left: 0px; height: 0px; width: 0px;">
                             </form>
                             @*BUTTON LƯU FORM*@
                             <div class="text-right mt-3">
@@ -99,6 +100,8 @@
         </div>
     </div>
 </section>
+
+
 
 
 
